# eqcycles

./: .gitignore  GEMINI.md  make_video.py  plan.md  plot_eq_sequance.py  pyproject.toml  report.md
src/eqcycles/analysis/: __init__.py  geometry.py  point_selection.py  rupture.py  scoring.py  synthetic.py
src/eqcycles/core/: __init__.py  data.py
src/eqcycles/io/: __init__.py  base.py  hbi.py
src/eqcycles/vis/: diagnostics.py  rupture_sequence.py  rupture_sequence_matplotlib.py  slip_rate_video.py  utils.py
test_notebooks/: test.ipynb
tests/: test_data_loader.py  test_imports.py
